...
    
    //MARK: - titleLabel
    private let titleLabel: UILabel = {
        var lab = UILabel()
        lab.textColor = .black
        lab.font = UIFont.systemFont(ofSize: 18)
        lab.text = "Мои навыки"
        lab.translatesAutoresizingMaskIntoConstraints = false
        
        return lab
    }()
    
    //MARK: - editButton
    private var editButton: UIButton = {
        var but = UIButton()
        but.setImage(UIImage(named: "pensill"), for: .normal)
        but.translatesAutoresizingMaskIntoConstraints = false
        but.accessibilityIdentifier = "editButton"
        
        return but
...
